<resources>
    <string name="app_name">app0121_2</string>
    <string name="cancelButton_text">취소</string>
    <string name="okButton_text">확인</string>
    <string name="saveCheckBox_text">저장</string>
    <string name="id_text">사번</string>
    <string name="name_text">이름</string>
    <string name="position_text">직책</string>
    <string name="title_text">CUDO</string>
    <string name="cancel_text">취소합니다.</string>
    <string name="save_text">저장하였습니다.</string>
    <string name="nsave_text">저장하지 않고 종료합니다.</string>
    <string name="nofeet_text">먹이가 부족합니다..</string>
    <string name="feed_text">먹이양(g)</string>
    <string name="time_text">끼니시간</string>
    <string name="start_text">시작</string>
    <string name="stop_text">초기화</string>
    <string name="totalfeed_text">남은 먹이양 : </string>
    <string name="done_text">가 식사를 마쳤습니다! </string>
    <string name="ndone_text">가 식사를 하지 못했습니다. </string>
    <string name="now_text">지금까지   </string>
    <string name="feedG_text">g 먹었습니다. </string>
    <string name="ListView_text">ListView Mode </string>
    <string name="RecyclerView_text">RecyclerView Mode </string>
    <string name="mode_text">MODE </string>
    <string name="animalInfo_feedVolume_text">Feed Volume :</string>
    <string name="animalInfo_totalFeed_text">Total Feed :</string>
    <string name="animalInfo_activity_text">Activity :</string>
</resources>
