<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"


    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="70dp"
            android:gravity="center_horizontal"
            android:text="@string/title_text"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/id_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/id_text"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/name_text"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/position_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/position_text"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/save_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveCheckBox_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode_text"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:textSize="30sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/list_radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ListView_text"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/recycler_radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RecyclerView_text"
                android:textSize="18sp" />

        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/cancelButton"
            android:onClick="cancelMessage"
            android:text="@string/cancelButton_text"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/okButton"
            android:onClick="okMessage"
            android:text="@string/okButton_text"
            android:textColor="#ffffff" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>