<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="7dp"
    android:layout_marginRight="7dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/secondLayoutId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="TextView"
            android:textColor="@color/blackTextColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/secondLayoutName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textColor="@color/blackTextColor"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ListView_text"
        android:gravity="center_horizontal"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >


        <LinearLayout
            android:id="@+id/edittextLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/feed_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/feed_text"
                android:inputType="number"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/time_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/time_text"
                android:inputType="number"
                android:textSize="20sp" />


        </LinearLayout>

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/startButtonColor"
            android:onClick="startButtonOnClick"
            android:text="@string/start_text"
            android:textColor="@color/whiteTextColor" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/totalfeed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:layout_weight="1"
            android:text="@string/totalfeed_text"
            android:textColor="@color/blackTextColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/remainFeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blackTextColor"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/progressListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="10dp"
        android:background="#CAAD9C"
        android:divider="@color/dividerColor"
        android:dividerHeight="3dp"
/>


</LinearLayout>

