<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="7dp"
    android:layout_marginRight="7dp"
    android:orientation="vertical">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@color/backgroundColor_info"
        >

        <LinearLayout
            android:id="@+id/animalInfo_ImageLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/backgroundColor_info"
            android:gravity="center">
            <ImageView
                android:id="@+id/animal_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:srcCompat="@drawable/icon_turtle" />


        </LinearLayout>



        <TextView
            android:id="@+id/animalInfo_FeedVolume_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animalInfo_feedVolume_text"
            android:textSize="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/animalInfo_ImageLayout"/>

        <TextView
            android:id="@+id/animalInfo_FeedVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/animalInfo_FeedVolume_text"
            android:text="TextView"
            android:textSize="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"
            android:layout_below="@id/animalInfo_ImageLayout"/>

        <TextView
            android:id="@+id/animalInfo_TotalFeed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/animalInfo_FeedVolume_text"
            android:text="@string/animalInfo_totalFeed_text"
            android:textSize="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/animalInfo_TotalFeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/animalInfo_TotalFeed_text"
            android:layout_below="@id/animalInfo_FeedVolume"
            android:text="TextView"
            android:textSize="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/animalInfo_activity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/animalInfo_TotalFeed_text"
            android:text="@string/animalInfo_activity_text"
            android:textSize="20dp"
            android:layout_marginLeft="40dp"
            />

        <TextView
            android:id="@+id/animalInfo_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/animalInfo_activity_text"
            android:layout_below="@id/animalInfo_TotalFeed"
            android:text="TextView"
            android:textSize="20dp"
            android:layout_marginLeft="5dp"/>

    </RelativeLayout>


</LinearLayout>
